Created the microwave class

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -5,6 +5,15 @@
         <title>Microwave</title>
     </head>
     <body>
-
+        <center>
+            <header>
+                <h1 id="microwave">Microwave</h1>
+            </header>
+            <section>
+                <canvas width="800" height="500">Your browser do not support canvas.</canvas>
+            </section>
+        </center>
+        <script language="JavaScript" src="js/js.js"></script>
+        <script language="JavaScript" src="js/Microwave.js"></script>
     </body>
 </html>
