--- a/Assets/index.html
+++ b/Assets/index.html
@@ -15,5 +15,6 @@
         </center>
         <script language="JavaScript" src="js/js.js"></script>
         <script language="JavaScript" src="js/Microwave.js"></script>
+        <script language="JavaScript" src="js/Clock.js"></script>
     </body>
 </html>
