--- a/Assets/index.html
+++ b/Assets/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <meta charset="utf-8">
-        <title>Microwave</title>
-    </head>
-    <body>
-        <center>
-            <header>
-                <h1 id="microwave">Microwave</h1>
-            </header>
-            <section>
-                <canvas width="800" height="500">Your browser do not support canvas.</canvas>
-            </section>
-        </center>
-        <script language="JavaScript" src="js/js.js"></script>
-        <script language="JavaScript" src="js/Microwave.js"></script>
-        <script language="JavaScript" src="js/Clock.js"></script>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Microwave</title>
+  </head>
+  <body>
+    <center>
+      <header>
+        <h1 id="microwave">Microwave</h1>
+      </header>
+      <section>
+        <canvas width="800" height="500">Your browser do not support canvas.</canvas>
+      </section>
+    </center>
+    <script language="JavaScript" src="js/js.js"></script>
+    <script language="JavaScript" src="js/Microwave.js"></script>
+    <script language="JavaScript" src="js/Clock.js"></script>
+  </body>
 </html>
