--- a/Assets/index.html
+++ b/Assets/index.html
@@ -16,5 +16,6 @@
     <script language="JavaScript" src="js/js.js"></script>
     <script language="JavaScript" src="js/Microwave.js"></script>
     <script language="JavaScript" src="js/Clock.js"></script>
+    <script language="JavaScript" src="js/Button.js"></script>
   </body>
 </html>
